# MLOps-hw1

./: .dvcignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  generate_proto.py  generate_proto.sh  pyproject.toml  requirements.txt
.dvc/: config
datasets/: adult.pkl.dvc  adult_target_encoder.json  iris.pkl.dvc
datasets/adult_encoders/: education_encoder.json  education_num_encoder.json  marital_status_encoder.json  native_country_encoder.json  occupation_encoder.json  race_encoder.json  relationship_encoder.json  sex_encoder.json  workclass_encoder.json
examples/: grpc_client.py  grpc_demo_client.py  recreate_shared_datasets.py  rest_api_auth.py  run_dashboard.py  test_rest_api.py
src/: __init__.py  config.py  dvc_manager.py  logger.py  s3_client.py  schemas.py
src/api/: grpc_server.py  rest_api.py
src/auth/: jwt_handler.py  user_manager.py
src/dashboard/: app.py
src/models/: base_model.py  dataset_manager.py  dataset_storage.py  logistic_regression.py  model_factory.py  model_manager.py  model_storage.py  random_forest.py
src/proto/: ml_service.proto
src/schemas/: models.py
src/utils/: logger.py
test_data/: adult_test.csv
tests/: test_api.py  test_auth.py  test_s3.py
