[tool.poetry]
name = "ml-api-service"
version = "0.1.0"
description = "ML API Service with REST and gRPC support"
authors = ["Student 1 <student1@example.com>", "Student 2 <student2@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.109.0"
uvicorn = {extras = ["standard"], version = "0.27.0"}
scikit-learn = "1.4.0"
pandas = "2.2.0"
numpy = "1.26.3"
pydantic = "2.5.3"
grpcio = "1.60.0"
grpcio-tools = "1.60.0"
protobuf = "4.25.2"
streamlit = "1.30.0"
plotly = "5.18.0"
python-multipart = "0.0.6"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
bcrypt = "4.1.2"
python-dotenv = "1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
pytest = "^7.4.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
